samples/_failures_safe/1761412605_24e70b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ab4da1d.c: In function ‘main’:
./samples/SAFE/__tmp_1ab4da1d.c:152:12: error: missing terminating " character
  152 |     printf("Graph
      |            ^~~~~~
./samples/SAFE/__tmp_1ab4da1d.c:152:5: error: expected expression at end of input
  152 |     printf("Graph
      |     ^~~~~~
./samples/SAFE/__tmp_1ab4da1d.c:152:5: error: expected declaration or statement at end of input
